--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<nav>
-  <a routerLink="/login" routerLinkActive="active">Login</a>
-  <a routerLink="/register" routerLinkActive="active">Register</a>
+<nav class="navbar navbar-dark bg-inverse">
+    <a class="navbar-brand" href="#">Darts</a>
+    <ul class="nav navbar-nav">
+        <li class="nav-item"><a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a></li>
+        <li class="nav-item"><a routerLink="/register" routerLinkActive="active" class="nav-link">Register</a></li>
+    </ul>
 </nav>
-<h1>
-  {{title}}
-</h1>
+
 <router-outlet></router-outlet>
