share css for auth

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <form class="form-signin" (ngSubmit)="register()">
-        <h2 class="form-signin-heading">Sign up Today!</h2>
+    <form class="form-auth" (ngSubmit)="register()">
+        <h2 class="form-auth-heading">Sign up Today!</h2>
         <label for="username" class="sr-only">Username</label>
         <input type="text" id="username" [(ngModel)]="user.username" name="username" class="form-control"
                placeholder="username" required="" autofocus="">
