--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <ul class="nav navbar-nav">
         <li class="nav-item"><a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a></li>
         <li class="nav-item"><a routerLink="/register" routerLinkActive="active" class="nav-link">Register</a></li>
+        <li class="nav-item"><a routerLink="/targets" routerLinkActive="active" class="nav-link">Targets</a></li>
     </ul>
 </nav>
 
