--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <form class="form-signin" (ngSubmit)="login()">
-        <h2 class="form-signin-heading">Please sign in</h2>
+    <form class="form-auth" (ngSubmit)="login()">
+        <h2 class="form-auth-heading">Please sign in</h2>
         <label for="username" class="sr-only">Username</label>
         <input type="text" id="username" [(ngModel)]="user.username" name="username" class="form-control"
                placeholder="username" required="" autofocus="">
