adding navbar element

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
     <ul class="nav navbar-nav">
         <li class="nav-item"><a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a></li>
         <li class="nav-item"><a routerLink="/register" routerLinkActive="active" class="nav-link">Register</a></li>
-        <li class="nav-item"><a routerLink="/targets" routerLinkActive="active" class="nav-link">Targets</a></li>
+        <li class="nav-item"><a routerLink="/targets/create" routerLinkActive="active" class="nav-link">Targets - Create</a></li>
+        <li class="nav-item"><a routerLink="/targets/retrieve" routerLinkActive="active" class="nav-link">Targets - Retrieve</a></li>
     </ul>
 </nav>
 
